--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,1 +1,16 @@
- 
+ .odd {
+    background-color: hsl(351, 100%, 86%);
+    font-family: 'Verdana', 'DejaVu Sans', 'sans-serif';
+    font-size: 24px;
+ }
+
+ #two {
+    color: rgb(0, 0, 255);
+    font-size: 24px;
+ }
+
+ #four {
+    background-color: #90ee90;
+    font-size: 24px;
+    font-weight: bold;
+ }
