--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,22 +2,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
-.para {
   font-size: 22px;
 }
 
-.confirm {
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
@@ -29,7 +21,8 @@ body {
   font-size: 20px;
 }
 
-.child {
+.small-para,
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
@@ -40,3 +33,4 @@ div.text {
   font-size: 22px;
   font-weight: 100;
 }
+ 
