--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -21,6 +25,12 @@ body {
   width: 48px;
   height: 48px;
 }
+
+.right-side, .left-side {
+  display: flex;
+  gap: 16px;
+}
+
 
 .logo {
   color: rebeccapurple;
@@ -44,5 +54,7 @@ a {
 }
 
 ul {
+  display: flex;
+  gap: 8px;
   list-style-type: none;
 }
