--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.logo-container {
+  display: flex;
+  gap: 52px;
+}
+
+.plant {
+  width: 200px;
+}
+
+.text {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +41,4 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
-}
+} 
