--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -11,7 +11,7 @@ body {
   background: darkmagenta;
   color: white;
   font-size: 32px;
-  font-weight: 700;
+  font-weight: 900;
   padding: 0 16px;
   display: flex;
   align-items: center;
@@ -37,25 +37,35 @@ body {
   background: royalblue;
   box-sizing: border-box;
   padding: 16px;
+  flex-shrink: 0;
 }
 
 .sidebar a {
   text-decoration: none;
   color: white;
+  font-size: 24px;
 }
 
 .sidebar ul {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin: 16px;
 }
 
 .cards {
   padding: 48px;
   display: inherit;
   flex-wrap: wrap;
+  gap: 32px;
 }
 
 .card {
-  width: calc(50% / 2);
+  width: 300px;
+  padding: 16px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
